# q2-types

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  pyproject.toml
conda-recipe/: meta.yaml
q2_types/: __init__.py  _util.py  plugin_setup.py
q2_types/bowtie2/: __init__.py  _formats.py  _types.py
q2_types/bowtie2/_deferred_setup/: __init__.py
q2_types/distance_matrix/: __init__.py  _formats.py  _types.py
q2_types/distance_matrix/_deferred_setup/: __init__.py  _transformers.py
q2_types/distance_matrix/tests/: test_formats.py  test_transformers.py  test_types.py
q2_types/feature_data/: __init__.py  _formats.py  _objects.py  _types.py
q2_types/feature_data/_deferred_setup/: __init__.py  _transformers.py  _validators.py
q2_types/feature_data/tests/: __init__.py  test_formats.py  test_transformer.py  test_type.py
q2_types/feature_table/: __init__.py  _formats.py  _types.py
q2_types/genome_data/: __init__.py  _methods.py
q2_types/kraken2/: __init__.py  _collators.py  _formats.py  _partitioners.py
q2_types/metadata/: __init__.py  _formats.py  _types.py
q2_types/multiplexed_sequences/: __init__.py  _formats.py  _objects.py  _types.py
q2_types/ordination/: __init__.py  _formats.py  _types.py
q2_types/per_sample_sequences/: __init__.py  _format.py  _formats.py  _methods.py  _partitioners.py  _transformer.py  _type.py  _types.py  _util.py
q2_types/sample_data/: __init__.py  _formats.py  _types.py
q2_types/tabular/: formats.py  types.py
q2_types/tests/: __init__.py  test_util.py
q2_types/tree/: __init__.py  _formats.py  _types.py
(+58 files in other folders)
